syntax = "proto3";
package com.newisland.common.messages.command;
import "google/protobuf/timestamp.proto";

message CreateReservationCommand {
  string user_full_name = 1;
  string user_email = 2;
  string campsite_id = 3;
  google.protobuf.Timestamp arrival_date = 4;
  google.protobuf.Timestamp departure_date = 5;
}